= 2.0.0.82 =
* Added GenerateBlocks plugin compatibility - ADDED

= 2.0.0.81 =
* Remove title/meta variables not related to location page - CHANGED
* Translation missing in OSM map routing search input description - FIXED
* Style issues on iphone - FIXED
* Show video file in HTML5 media format - ADDED
* Divi theme builder template compatibility - FIXED
* Filter added to customize Google map marker animation - ADDED
* Near search not clearing GPS when only core is active - FIXED
* Show "time ago" for post date - ADDED

= 2.0.0.80 =
* Unable to save empty value for date field - FIXED
* Porto theme compatibility - FIXED
* Export post edit date value in CSV - ADDED
* AyeCode Connect notice now shows on extensions pages - ADDED
* Genesis theme simple menus & simple sidebars compatibility - ADDED
* Page Builder Framework theme compatibility - ADDED

= 2.0.0.79 =
* OceanWP theme & Elementor plugin compatibility - FIXED
* Ninja Forms still have not fixed their bug, we have added a more permanent fix until they fix it - FIXED
* Recipe schema option added - ADDED

= 2.0.0.77 =
* Avada v6.2 theme compatibility - FIXED

= 2.0.0.76 =
* Location page og:url for rank math - FIXED
* File field shows required field error twice - FIXED
* GD Listings widgets should show pending listings on author page - CHANGED
* Ninja Forms recent update breaks maps & API requests - FIXED

= 2.0.0.75 =
* Longitude validation fails to validate longitude with minus sign - FIXED
* Static map loads Google Map API even OSM API is enabled - FIXED
* Show formatted post date & post modified date in a badge - ADDED
* Twenty Twenty theme show 404 when no results found on search page - FIXED
* Post preview is not working for listing with status pending - FIXED
* Ninja Forms deprecated version with GeoDirectory shows blank page on site - FIXED
* Dynamic Content widget added for output of dynamic html or shortcodes - ADDED
* OceanWP theme shows incorrect titles on GD archive pages - FIXED