@@ -1,5 +1,6 @@
 = 2.0.0.82 =
 * Added GenerateBlocks plugin compatibility - ADDED
+* Search with category and tag keyword combination not showing correct results - FIXED
 
 = 2.0.0.81 =
 * Remove title/meta variables not related to location page - CHANGED
